# DesiredOrientationRRT

./: .gitignore  CMakeLists.txt  OMPL_ROS.sh  README.md
CMakeModules/: ompl.pc
ROS_packages/decision_maker/: CMakeLists.txt  package.xml
ROS_packages/decision_maker/deprecated/: decision_maker_ros_backup.cpp  decision_maker_ros_comment_ver_0104.cpp  ebandmanager.h
ROS_packages/decision_maker/inc/: ebandmanager.h  quadtree.h
ROS_packages/decision_maker/include/: decision_maker.h  quadtree.h
ROS_packages/decision_maker/include/deprecated/: DORRT.h
ROS_packages/decision_maker/launch/: decision_maker.launch
ROS_packages/decision_maker/src/: decision_maker.cpp  decision_maker_node.cpp  decision_maker_ros.cpp
ROS_packages/decision_maker/src/deprecated/: decision_maker_ros.cpp
demos/: AppBase.h  CMakeLists.txt  CTestTestfile.cmake  DynamicCarPlanning.cp  DynamicCarPlanning.h  GeometricCarPlanning_Backup_170131.cpp  GeometricCarPlanning_tmp.cpp  GeometrySpecification.h  Makefile  RigidBodyGeometry.cpp  RigidBodyGeometry.h  appUtil.cpp  appUtil.h  cmake_install.cmake
doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
py-bindings/: CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ompl/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  config.h.in
src/ompl/CMakeFiles1/ompl.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt  progress.make
src/ompl/base/: SpaceInformation.h  StateSpace.h  StateSpaceTypes.h
src/ompl/base/spaces/: ClothoidStateSpace.h  DiscreteStateSpace.h  DubinsStateSpace.h  RealVectorStateSpace.h  ReedsSheppStateSpace.h  SO2StateSpace.h  SO3StateSpace.h
src/ompl/base/spaces/src/: ClothoidStateSpace.cpp  DiscreteStateSpace.cpp  DubinsStateSpace.cpp  RealVectorStateSpace.cpp  ReedsSheppStateSpace.cpp  SO2StateSpace.cpp  SO3StateSpace.cpp
src/ompl/base/src/: StateSpace.cpp
src/ompl/control/planners/rrt/: DORRT.h  RG-RRT.h  RG-RRT.h_tmp
src/ompl/control/planners/rrt/src/: DORRT.cpp  RG-RRT.cpp  RG-RRT.cpp_tmp  RRT.cpp
src/ompl/extensions/clothoid/: Clothoid.h
src/ompl/extensions/clothoid/src/: Clothoid.cpp  CubicRootsFlocke.cpp  Triangle2D.cpp
src/ompl/extensions/posq/: posq.h
src/ompl/geometric/planners/cforest/: CForest.h  CForestStateSpaceWrapper.h
src/ompl/geometric/planners/cforest/src/: CForest.cpp
src/ompl/geometric/planners/rrt/: DORRT.h  DORRT_1.h  DORRT_2.h  DORRT_3.h  DORRTstar.h  DORRTstar_1.h  DORRTstar_2.h  DORRTstar_3.h  DORRTstar_4.h  InformedDORRTstar.h  InformedRRTstar.h  RRTstar.h  pDORRT.h
src/ompl/geometric/planners/rrt/src/: .DORRT.cpp.swo  DORRT.cpp  DORRT_0414_GDO.cpp.backup.sh  DORRT_0414_NO_GDO.cpp.backup.sh  DORRT_1.cpp  DORRT_2.cpp  DORRT_3.cpp  DORRTstar.cpp  DORRTstar_1.cpp  DORRTstar_2.cpp  DORRTstar_3.cpp  DORRTstar_4.cpp  InformedDORRTstar.cpp  InformedRRTstar.cpp  RRT.cpp  RRTstar.cpp  pDORRT.cpp
src/ompl/geometric/src/: PathGeometric.cpp  SimpleSetup.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/regression_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
