<?xml version="1.0"?>
<package>
  <name>decision_maker</name>
  <version>0.0.0</version>
  <description>The decision_maker package</description>

  <maintainer email="dyros-vehicle@todo.todo">dyros-vehicle</maintainer>

  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
