<?xml version="1.0"?>
<package>
  <name>decision_maker</name>
  
  <version>0.1.0</version>
  
  <description>
    The decision_maker package from DYROS Laboaratory, Seoul National University.
    Original Verision is written by Seho Shin.
    Mostly modified by Edwrad Gyu Beom Im.
  </description>

  <maintainer email="edwardim@snu.ac.kr">Edward Gyu Beom Im</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
